# analizilo

./: Cargo.toml  README.md
src/: dump  lib.rs  roots.py  wiki-dump
src/ressources/: dump
src/word/: convert.rs  macros.rs  mod.rs  priority.rs  token.rs
